--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<div>app</div>
+<div class="page">
+	<div class="nav-bar">
+		<span class="title">POKEAPP</span>
+		<!--<a class="logo" [routerLink]="['/']">-->
+			<!--<div>-->
+				<!--<img class="icon" src="../assets/icons/pokeballs.svg">-->
+			<!--</div>-->
+		<!--</a>-->
+	</div>
+	<div class="page-content">
+		<router-outlet></router-outlet>
+	</div>
+</div>
