--- a/src/app/shared/type-emblem/type-emblem.component.scss
+++ b/src/app/shared/type-emblem/type-emblem.component.scss
@@ -18,17 +18,19 @@
 	width: 160px;
 	height: 160px;
 	border-radius: 50%;
-	box-shadow: inset 0px 0px 50px 0px #000000;
+	box-shadow: inset 0px 0px 75px 0px #000000;
 }
 
 .icon {
 	height: 100px;
 	width: 100px;
-	opacity: 0.6;
+	opacity: 0.8;
+	filter: invert(1);
 }
 
 .type-label {
 	font-weight: bolder;
 	font-size: 15px;
-	opacity: 0.6;
+	opacity: 0.8;
+	color: white;
 }
