--- a/src/app/shared/type-emblem/type-emblem.component.scss
+++ b/src/app/shared/type-emblem/type-emblem.component.scss
@@ -1,12 +1,13 @@
 @import "../../../variables";
+@import "../../../color-scheme";
 
 .outer-circle {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 175px;
-	height: 175px;
+	width: 170px;
+	height: 170px;
 	border-radius: 50%;
 }
 
