--- a/src/app/types/types.component.scss
+++ b/src/app/types/types.component.scss
@@ -1,1 +1,20 @@
 @import "../../variables.scss";
+
+
+.type-emblem-container {
+	display: flex;
+	flex-direction: row;
+	width: 200px;
+}
+
+a {
+	transition: $transition;
+
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.type-emblem {
+	margin: 20px;
+}
