--- a/src/app/shared/type-emblem/type-emblem.component.scss
+++ b/src/app/shared/type-emblem/type-emblem.component.scss
@@ -23,8 +23,8 @@
 }
 
 .icon {
-	height: 100px;
-	width: 100px;
+	height: 90px;
+	width: 90px;
 	opacity: 0.8;
 	filter: invert(1);
 }
@@ -34,4 +34,54 @@
 	font-size: 15px;
 	opacity: 0.8;
 	color: white;
+	margin-top: 5px;
+}
+
+.one-type {
+	position: relative;
+}
+
+.circle {
+	width: 50vw;
+	height: 50vw;
+	background: linear-gradient(45deg, blue, blue 50%, red 50%, red);
+	border-radius: 50%;
+	box-shadow: inset 0px 0px 75px 0px #000000;
+
+}
+
+.icon-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+}
+
+.two-types {
+	.icon {
+		width: 35px;
+		height: 35px;
+	}
+	.type-label {
+		font-size: 10px;
+	}
+	.half {
+		&:first-child {
+			position: absolute;
+			clip-path: polygon(-75px -75px, 0% calc(100% + 75px), calc(100% + 75px) calc(100% + 75px));
+			.icon-text {
+				right: 52%;
+				top: 52%;
+			}
+		}
+		&:last-child {
+			position: relative;
+			clip-path: polygon(-75px -75px, calc(100% + 75px) 0px, calc(100% + 75px) calc(100% + 75px));
+			.icon-text {
+				left: 52%;
+				bottom: 52%;
+			}
+		}
+	}
 }
