--- a/src/app/types/types.component.scss
+++ b/src/app/types/types.component.scss
@@ -1,9 +1,7 @@
 @import "../../variables.scss";
 
 .type-emblem-container {
-	display: flex;
-	flex-direction: row;
-	width: 200px;
+	//flex-direction: row;
 }
 
 a {
