type emblems list rearrange color profile and navbar development

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="page">
 	<div class="nav-bar">
-		<span class="title">POKEAPP</span>
-		<!--<a class="logo" [routerLink]="['/']">-->
-			<!--<div>-->
-				<!--<img class="icon" src="../assets/icons/pokeballs.svg">-->
-			<!--</div>-->
-		<!--</a>-->
+		<a class="logo" [routerLink]="['/']">
+			<span class="title part-1">POKE</span>
+			<img class="icon" src="../assets/icons/pokeballs.svg">
+			<span class="title part-2">APP</span>
+		</a>
 	</div>
 	<div class="page-content">
 		<router-outlet></router-outlet>
