--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,6 +10,11 @@ $red: #d32f2f;
 $orange: #f57c00;
 $teal: #4db6ac;
 
+$light-blue-poke-color: #3172b5;
+$dark-blue-poke-color: #22396c;
+$light-yellow-poke-color: #feca30;
+$dark-yellow-poke-color: #c69f25;
+
 $red-accent: #ff1744;
 $green-accent: #64dd17;
 
