--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,45 @@
 @import "../variables.scss";
 
 .page {
-	color: black;
-}
-
-.nav-bar {
-	height: 400px;
-}
-
-.icon {
-	height: 200px;
-}
-
-.page-content {
+	background-color: $light-blue-poke-color;
+	min-height: 100vh;
+	min-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	.nav-bar {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: $dark-blue-poke-color;
+		height: 200px;
+		width: 100%;
+		box-shadow: 0px 0px 25px 5px #111111;
+		margin-bottom: 100px;
+		.logo {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			.icon {
+				height: 300px;
+				margin-bottom: -80px;
+				position: absolute;
+				left: calc(50% - 150px);
+				top: 0px;
+			}
+			.title {
+				font-weight: bold;
+				font-size: 72px;
+				color: $light-yellow-poke-color;
+			}
+			.part-1 {
+				position: absolute;
+				right: calc(50% + 150px);
+			}
+			.part-2 {
+				position: absolute;
+				left: calc(50% + 150px);
+			}
+		}
+	}
 }
