--- a/src/app/types/types.component.html
+++ b/src/app/types/types.component.html
@@ -12,7 +12,7 @@
 <!--</div>-->
 
 <div class="page">
-	<div class="{{this.class}}">
+	<div class="{{this.widthClass}}">
 		<div class="type-emblem" *ngFor="let type of types; let i = index" (window:resize)="onResize($event)">
 			<a (click)="onClickTest(i)">
 				<pok-type-emblem [type]=type></pok-type-emblem>
