--- a/src/color-scheme.scss
+++ b/src/color-scheme.scss
@@ -180,3 +180,12 @@
 		background-color: #a0a0a0;
 	}
 }
+
+.water-background {
+	background: rgb(136, 157, 206);
+	//background: red;
+}
+
+.ghost-background {
+	background: rgb(35, 35, 35);
+}
