--- a/src/app/shared/stat-card/stat-card.component.scss
+++ b/src/app/shared/stat-card/stat-card.component.scss
@@ -4,7 +4,9 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
+	width: 300px;
+	padding: 7px;
 }
 
 .ring-outer-part {
