--- a/src/app/shared/type-emblem/type-emblem.component.scss
+++ b/src/app/shared/type-emblem/type-emblem.component.scss
@@ -2,6 +2,7 @@
 @import "../../../color-scheme";
 
 .outer-circle {
+
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -9,6 +10,22 @@
 	width: 170px;
 	height: 170px;
 	border-radius: 50%;
+}
+
+.type-emblem {
+	width: 170px;
+	height: 170px;
+	&:hover {
+		.outer-circle {
+			transition: all 40ms ease-in-out;
+			filter: brightness(120%);
+		}
+		.inner-circle {
+			transition: all 40ms ease-in-out;
+			filter: brightness(70%);
+		}
+
+	}
 }
 
 .inner-circle {
