--- a/src/app/shared/stat-card/stat-card.component.scss
+++ b/src/app/shared/stat-card/stat-card.component.scss
@@ -31,11 +31,18 @@
 	border-radius: 50%;
 }
 
+.circle {
+	position: relative;
+}
+
 .icon {
 	height: 44px;
 	width: 44px;
 	opacity: 0.8;
 	filter: invert(1);
+	position: absolute;
+	top: 18px;
+	left: 18px;
 }
 
 .description {
@@ -55,4 +62,8 @@
 .stat-value {
 	font-size: 26px;
 	font-weight: bold;
+}
+
+.stat-emblem {
+	position: relative;
 }
