--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="content">
 		<div class="type-emblem">
-			<pok-type-emblem [type]="type"></pok-type-emblem>
+			<pok-type-emblem [type]="type" [active]="false"></pok-type-emblem>
 		</div>
 		<img class="sprite" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png">
 		<div class="stats">
