--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -22,6 +22,7 @@
 }
 
 .content {
+	height: 500px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -31,18 +32,19 @@
 }
 
 .background {
-	position: relative;
+	position: absolute;
+	left: 0px;
 }
 
 .background-primary {
 	position: absolute;
-	width: 1570px;
+	width: 100vw;
 	height: 500px;
 	clip-path: polygon(0 0, 0% 100%, 100% 100%);
 }
 
 .background-secondary {
-	width: 1570px;
+	width: 100vw;
 	height: 500px;
 	position: absolute;
 	clip-path: polygon(0 0, 100% 0, 100% 100%);
