--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,24 @@
 @import "../variables.scss";
 
 .page {
-	background-color: $light-blue-poke-color;
+	background-color: $dark-gray-background;
 	min-height: 100vh;
 	min-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	.nav-bar {
+		font-size: calc(300px / 4);
+		position: fixed;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: center;
+		align-items: center;
 		background-color: $dark-blue-poke-color;
 		height: 200px;
 		width: 100%;
 		box-shadow: 0px 0px 25px 5px #111111;
-		margin-bottom: 100px;
+		z-index: 2;
 		.logo {
 			display: flex;
 			flex-direction: row;
@@ -28,8 +31,7 @@
 				top: 0px;
 			}
 			.title {
-				font-weight: bold;
-				font-size: 72px;
+				font-weight: normal;
 				color: $light-yellow-poke-color;
 			}
 			.part-1 {
@@ -46,5 +48,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		width: 100vw;
+		margin-top: 200px;
 	}
 }
