--- a/src/app/types/types.component.html
+++ b/src/app/types/types.component.html
@@ -15,7 +15,7 @@
 	<div class="{{this.widthClass}}">
 		<div class="type-emblem" *ngFor="let type of types; let i = index" (window:resize)="onResize($event)">
 			<a (click)="onClickTest(i)">
-				<pok-type-emblem [type]=type></pok-type-emblem>
+				<pok-type-emblem [type]=type [active]="true"></pok-type-emblem>
 			</a>
 		</div>
 	</div>
