--- a/src/color-scheme.scss
+++ b/src/color-scheme.scss
@@ -182,10 +182,10 @@
 }
 
 .water-background {
-	background: rgb(136, 157, 206);
+	background: rgba(136, 157, 206, 0.3);
 	//background: red;
 }
 
 .ghost-background {
-	background: rgb(35, 35, 35);
+	background: rgba(35, 35, 35, 0.3);
 }
