--- a/src/app/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons.component.html
@@ -1,3 +1,1 @@
-<pok-pokemon></pok-pokemon>
-<pok-pokemon></pok-pokemon>
-<pok-pokemon></pok-pokemon>
+<pok-pokemon [pokemon]="this.pokemon"></pok-pokemon>
