--- a/src/color-scheme.scss
+++ b/src/color-scheme.scss
@@ -1,183 +1,183 @@
 .normal {
-	.outer-circle {
+	.primary {
 		background-color: #b4b489;
 	}
 	.inner-circle {
-		background-color: #b4b489;
+		background-color: #7e7d61;
 	}
 }
 
 .fighting {
-	.outer-circle {
+	.primary {
 		background-color: #ed403c;
 	}
 	.inner-circle {
-		background-color: #9f9f9f;
+		background-color: #8f8f8f;
 	}
 }
 
 .flying {
-	.outer-circle {
+	.primary {
 		background-color: #86c6ce;
 	}
 	.inner-circle {
-		background-color: #86c6ce;
+		background-color: #7ab2b8;
 	}
 }
 
 .poison {
-	.outer-circle {
+	.primary {
 		background-color: #00ce3e;
 	}
 	.inner-circle {
-		background-color: #54ce76;
+		background-color: #50b86d;
 	}
 }
 
 .ground {
-	.outer-circle {
+	.primary {
 		background-color: #9d6f39;
 	}
 	.inner-circle {
-		background-color: #cec868;
+		background-color: #b9b363;
 	}
 }
 
 .rock {
-	.outer-circle {
+	.primary {
 		background-color: #777777;
 	}
 	.inner-circle {
-		background-color: #bcbcbc;
+		background-color: #a9a9a9;
 	}
 }
 
 .bug {
-	.outer-circle {
+	.primary {
 		background-color: #a80000;
 	}
 	.inner-circle {
-		background-color: #efef00;
+		background-color: #d7d52e;
 	}
 }
 
 .ghost {
-	.outer-circle {
+	.primary {
 		background-color: #343434;
 	}
 	.inner-circle {
-		background-color: #f4f4f4;
+		background-color: #dcdcdc;
 	}
 }
 
 .steel {
-	.outer-circle {
+	.primary {
 		background-color: #bdbdbd;
 	}
 	.inner-circle {
-		background-color: #bdbdbd;
+		background-color: #aaaaaa;
 	}
 }
 
 .fire {
-	.outer-circle {
+	.primary {
 		background-color: #8e3529;
 	}
 	.inner-circle {
-		background-color: #de5239;
+		background-color: #c64c39;
 	}
 }
 
 .water {
-	.outer-circle {
+	.primary {
 		background: #0c4bce;
 	}
 	.inner-circle {
-		background: #0c4bce;
+		background: #1249b7;
 
 	}
 }
 
 .grass {
-	.outer-circle {
+	.primary {
 		background: #974c00;
 	}
 	.inner-circle {
-		background: #00a000;
+		background: #138e15;
 
 	}
 }
 
 .electric {
-	.outer-circle {
+	.primary {
 		background: #efad00;
 	}
 	.inner-circle {
-		background: #ffff00;
+		background: #e5e431;
 
 	}
 }
 
 .psychic {
-	.outer-circle {
+	.primary {
 		background-color: #dc0000;
 	}
 	.inner-circle {
-		background-color: #f4f4f4;
+		background-color: #d7d7d7;
 	}
 }
 
 .ice {
-	.outer-circle {
+	.primary {
 		background-color: #0081e9;
 	}
 	.inner-circle {
-		background-color: #54c6de;
+		background-color: #51b3c6;
 	}
 }
 
 .dragon {
-	.outer-circle {
+	.primary {
 		background-color: #e02500;
 	}
 	.inner-circle {
-		background-color: #e07a1a;
+		background-color: #c86f26;
 	}
 }
 
 .dark {
-	.outer-circle {
+	.primary {
 		background-color: #1b1b1b;
 	}
 	.inner-circle {
-		background-color: #484848;
+		background-color: #414141;
 	}
 }
 
 .fairy {
-	.outer-circle {
+	.primary {
 		background-color: #efd000;
 	}
 	.inner-circle {
-		background-color: #45d4e0;
+		background-color: #45bec9;
 	}
 }
 
 .unknown {
-	.outer-circle {
+	.primary {
 		background-color: #dddddd;
 	}
 	.inner-circle {
-		background-color: #c0b2e6;
+		background-color: #ada1cd;
 	}
 }
 
 .shadow {
-	.outer-circle {
+	.primary {
 		background-color: #646464;
 	}
 	.inner-circle {
-		background-color: #a0a0a0;
+		background-color: #909090;
 	}
 }
 
