first card of pokemon info development inactive type emblem has no shadow

--- a/src/app/shared/type-emblem/type-emblem.component.html
+++ b/src/app/shared/type-emblem/type-emblem.component.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="two-types" *ngIf="type.length==2">
 		<div class="{{this.type[0].name}} half">
-			<div class="primary mat-elevation-z10">
+			<div class="primary ">
 				<div class="inner-circle">
 					<div class="icon-text">
 						<img class="icon"
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<div class="{{this.type[1].name}} half">
-			<div class="primary mat-elevation-z10">
+			<div class="primary ">
 				<div class="inner-circle">
 					<div class="icon-text">
 						<img class="icon"
