--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,19 +1,63 @@
 <div class="pokemon">
-	<div class="background" [ngClass]="{'dual-type': this.pokemon.types.length > 1}">
-		<div class="{{this.pokemon.types[0].name}}">
-			<div class="background-primary primary">
+	<div class="card info">
+		<div class="background" [ngClass]="{'dual-type': this.pokemon.types.length > 1}">
+			<div class="{{this.pokemon.types[0].name}}">
+				<div class="background-primary primary">
+				</div>
+			</div>
+			<div *ngIf="this.pokemon.types.length > 1" class="{{this.pokemon.types[1].name}}">
+				<div class="background-secondary primary">
+				</div>
 			</div>
 		</div>
-		<div *ngIf="this.pokemon.types.length > 1" class="{{this.pokemon.types[1].name}}">
-			<div class="background-secondary primary">
+		<div class="content">
+			<div class="column">
+				<div class="overview">
+					<div class="info">
+						<div>
+							Height:
+						</div>
+						<div class="value">
+							{{this.pokemon.height + "cm"}}
+						</div>
+					</div>
+					<div class="info">
+						<div>
+							Weight:
+						</div>
+						<div class="value">
+							{{this.pokemon.weight + "kg"}}
+						</div>
+					</div>
+					<div class="info">
+						<div>
+							Damage Type<span *ngIf="checkMultipleDamageTypes()">s</span>:
+						</div>
+						<div class="value">
+						<span>
+							{{this.pokemon.types[0].move_damage_class.name}}
+						</span>
+							<span *ngIf="checkMultipleDamageTypes()">
+							, {{this.pokemon.types[1].move_damage_class.name}}
+						</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<div class="name">
+					{{this.pokemon.name | uppercase}}
+				</div>
+				<div class="type-emblem">
+					<pok-type-emblem [type]="this.pokemon.types" [active]="false"></pok-type-emblem>
+				</div>
+			</div>
+			<div class="column">
+				<img class="sprite" src="{{this.url}}">
 			</div>
 		</div>
 	</div>
-	<div class="content">
-		<div class="type-emblem">
-			<pok-type-emblem [type]="this.pokemon.types" [active]="false"></pok-type-emblem>
-		</div>
-		<img class="sprite" src="{{this.url}}">
+	<div class="card">
 		<div class="stats">
 			<div class="stat" *ngFor="let stat of this.pokemon.stats">
 				<pok-stat-card [stat]="stat"></pok-stat-card>
