--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -2,59 +2,90 @@
 @import '../../color-scheme.scss';
 
 $height: 600px;
-
-.dual-type {
-	.background-primary {
-		clip-path: polygon(0 0, 0% 100%, 100% 100%);
-	}
-	.background-secondary {
-		clip-path: polygon(0 0, 100% 0, 100% 100%);
-	}
-}
-
 .pokemon {
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-
-.stats {
-	width: 600px;
-}
-
-.stat {
-	float: left;
-}
-
-.sprite {
-	width: 500px;
-	image-rendering: pixelated;
-}
-
-.content {
-	height: $height;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	z-index: 1;
-	padding-top: 100px;
-}
-
-.background {
-	position: absolute;
-	left: 0px;
-	opacity: 0.3;
-}
-
-.background-primary {
-	position: absolute;
-	width: 100vw;
-	height: $height;
-}
-
-.background-secondary {
-	position: absolute;
-	width: 100vw;
-	height: $height;
+	flex-direction: column;
+	.card {
+		width: 100vw;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		box-shadow: 0px 0px 25px 5px #111111;
+		clip-path: polygon(0 0, 100% 0, 100% calc(100% + 30px), 0% calc(100% + 30px));
+		&.info {
+			.background {
+				position: absolute;
+				left: 0px;
+				opacity: 0.3;
+				.background-primary {
+					position: absolute;
+					width: 100vw;
+					height: $height;
+				}
+				.background-secondary {
+					position: absolute;
+					width: 100vw;
+					height: $height;
+				}
+			}
+			.dual-type {
+				.background-primary {
+					clip-path: polygon(0 0, 0% 100%, 100% 100%);
+				}
+				.background-secondary {
+					clip-path: polygon(0 0, 100% 0, 100% 100%);
+				}
+			}
+			.content {
+				height: $height;
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				//justify-content: space-around;
+				z-index: 1;
+				padding-top: 100px;
+				.column {
+					height: 100%;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					.overview {
+						width: 500px;
+					}
+					.type-emblem {
+						margin-bottom: 80px;
+					}
+					.info {
+						display: flex;
+						flex-direction: column;
+						align-items: center;
+						font-size: 18px;
+						font-weight: normal;
+						padding-bottom: 40px;
+						&:last-child {
+							padding-bottom: 0px;
+						}
+						.value {
+							font-size: 28px;
+							font-weight: bold;
+							display: flex;
+							flex-direction: row;
+						}
+					}
+					.name {
+						width: 500px;
+						text-align: center;
+						font-size: 85px;
+						font-weight: bold;
+						padding-bottom: 45px;
+					}
+				}
+				.sprite {
+					width: 500px;
+					image-rendering: pixelated;
+				}
+			}
+		}
+	}
 }
