--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -50,8 +50,23 @@ $height: 600px;
 					flex-direction: column;
 					justify-content: center;
 					align-items: center;
+					position: relative;
+					&:first-child{
+						width: 300px
+					}
+					.pika-ruler{
+						//margin-right: 100px;
+						//width: 200px;
+						display: flex;
+						flex-direction: column;
+						justify-content: flex-start;
+						position: absolute;
+						bottom: 22%;
+						left: 30%;
+					}
 					.overview {
-						width: 500px;
+						width: 300px;
+						margin-right: -100px;
 					}
 					.type-emblem {
 						margin-bottom: 80px;
@@ -72,6 +87,17 @@ $height: 600px;
 							display: flex;
 							flex-direction: row;
 						}
+						.pikachus {
+							font-size: 12px;
+							font-weight: normal;
+						}
+					}
+						.pikachu {
+							opacity: 0.8;
+							filter: brightness(0);
+							margin-top: -10%;
+							margin-bottom: -10%;
+						}
 					}
 					.name {
 						width: 500px;
@@ -85,7 +111,11 @@ $height: 600px;
 					width: 500px;
 					image-rendering: pixelated;
 				}
-			}
 		}
 	}
+}
+
+.photo {
+	height: 15px;
+
 }
