--- a/src/color-scheme.scss
+++ b/src/color-scheme.scss
@@ -1,182 +1,182 @@
 .normal {
-	.primary {
+	.primary-color {
 		background-color: #b4b489;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #7e7d61;
 	}
 }
 
 .fighting {
-	.primary {
+	.primary-color {
 		background-color: #ed403c;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #8f8f8f;
 	}
 }
 
 .flying {
-	.primary {
+	.primary-color {
 		background-color: #86c6ce;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #7ab2b8;
 	}
 }
 
 .poison {
-	.primary {
+	.primary-color {
 		background-color: #00ce3e;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #50b86d;
 	}
 }
 
 .ground {
-	.primary {
+	.primary-color {
 		background-color: #9d6f39;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #b9b363;
 	}
 }
 
 .rock {
-	.primary {
+	.primary-color {
 		background-color: #777777;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #a9a9a9;
 	}
 }
 
 .bug {
-	.primary {
+	.primary-color {
 		background-color: #a80000;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #d7d52e;
 	}
 }
 
 .ghost {
-	.primary {
+	.primary-color {
 		background-color: #343434;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #dcdcdc;
 	}
 }
 
 .steel {
-	.primary {
+	.primary-color {
 		background-color: #bdbdbd;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #aaaaaa;
 	}
 }
 
 .fire {
-	.primary {
+	.primary-color {
 		background-color: #8e3529;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #c64c39;
 	}
 }
 
 .water {
-	.primary {
+	.primary-color {
 		background: #0c4bce;
 	}
-	.inner-circle {
+	.secondary-color {
 		background: #1249b7;
 
 	}
 }
 
 .grass {
-	.primary {
+	.primary-color {
 		background: #974c00;
 	}
-	.inner-circle {
+	.secondary-color {
 		background: #138e15;
 
 	}
 }
 
 .electric {
-	.primary {
+	.primary-color {
 		background: #efad00;
 	}
-	.inner-circle {
+	.secondary-color {
 		background: #e5e431;
 
 	}
 }
 
 .psychic {
-	.primary {
+	.primary-color {
 		background-color: #dc0000;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #d7d7d7;
 	}
 }
 
 .ice {
-	.primary {
+	.primary-color {
 		background-color: #0081e9;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #51b3c6;
 	}
 }
 
 .dragon {
-	.primary {
+	.primary-color {
 		background-color: #e02500;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #c86f26;
 	}
 }
 
 .dark {
-	.primary {
+	.primary-color {
 		background-color: #1b1b1b;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #414141;
 	}
 }
 
 .fairy {
-	.primary {
+	.primary-color {
 		background-color: #efd000;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #45bec9;
 	}
 }
 
 .unknown {
-	.primary {
+	.primary-color {
 		background-color: #dddddd;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #ada1cd;
 	}
 }
 
 .shadow {
-	.primary {
+	.primary-color {
 		background-color: #646464;
 	}
-	.inner-circle {
+	.secondary-color {
 		background-color: #909090;
 	}
 }
