--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,81 +1,20 @@
 <div class="pokemon">
-	<div class="card info">
-		<div class="background" [ngClass]="{'dual-type': this.pokemon.types.length > 1}">
-			<div class="{{this.pokemon.types[0].name}}">
-				<div class="background-primary primary">
-				</div>
-			</div>
-			<div *ngIf="this.pokemon.types.length > 1" class="{{this.pokemon.types[1].name}}">
-				<div class="background-secondary primary">
-				</div>
-			</div>
+	<div class="section">
+		<pok-overview [pokemon]="this.pokemon"></pok-overview>
+	</div>
+	<div class="card stats">
+		<div class="title">
+			STATS
 		</div>
 		<div class="content">
-			<div class="column">
-				<div class="pika-ruler">
-				<img src="../../assets/icons/pikachu.png" class="pikachu" id="first" [ngStyle]="{'height.px': this.pikachusHeight}" >
-				<img *ngFor="let i of [].constructor(this.pikaHeightRound)"
-					 src="../../assets/icons/pikachu.png" class="pikachu" [ngStyle]="{'height.px': this.pikachusHeight}" >
-			</div>
-			</div>
-
-			<div class="column">
-				<div class="overview">
-					<div class="info">
-						<div>
-							Height:
-						</div>
-						<div class="value">
-							{{this.pokemon.height * 10 + "cm"}}
-						</div>
-						<div class="pikachus">
-							{{this.pikachuService.getPikachusByHeight(this.pokemon.height) + " Pikachu"}}
-						</div>
-					</div>
-					<div class="info">
-						<div>
-							Weight:
-						</div>
-						<div class="value">
-							{{this.pokemon.weight / 10 + "kg"}}
-						</div>
-						<div class="pikachus">
-							{{this.pikachuService.getPikachusByWeight(this.pokemon.weight) + " Pikachu"}}
-						</div>
-					</div>
-					<div class="info">
-						<div>
-							Damage Type<span *ngIf="checkMultipleDamageTypes()">s</span>:
-						</div>
-						<div class="value">
-						<span>
-							{{this.pokemon.types[0].move_damage_class.name}}
-						</span>
-							<span *ngIf="checkMultipleDamageTypes()">
-							, {{this.pokemon.types[1].move_damage_class.name}}
-						</span>
-						</div>
-					</div>
+			<div class="stats-container">
+				<div class="stat" *ngFor="let stat of this.pokemon.stats">
+					<pok-stat-card [stat]="stat"></pok-stat-card>
 				</div>
-			</div>
-			<div class="column">
-				<div class="name">
-					{{this.pokemon.name | uppercase}}
-				</div>
-				<div class="type-emblem">
-					<pok-type-emblem [type]="this.pokemon.types" [active]="false"></pok-type-emblem>
-				</div>
-			</div>
-			<div class="column">
-				<img class="sprite" src="{{this.url}}">
 			</div>
 		</div>
 	</div>
-	<div class="card">
-		<div class="stats">
-			<div class="stat" *ngFor="let stat of this.pokemon.stats">
-				<pok-stat-card [stat]="stat"></pok-stat-card>
-			</div>
-		</div>
+	<div class="card evo">
+
 	</div>
 </div>
