--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -12,110 +12,38 @@ $height: 600px;
 		justify-content: center;
 		box-shadow: 0px 0px 25px 5px #111111;
 		clip-path: polygon(0 0, 100% 0, 100% calc(100% + 30px), 0% calc(100% + 30px));
-		&.info {
-			.background {
-				position: absolute;
-				left: 0px;
-				opacity: 0.3;
-				.background-primary {
-					position: absolute;
-					width: 100vw;
-					height: $height;
-				}
-				.background-secondary {
-					position: absolute;
-					width: 100vw;
-					height: $height;
-				}
-			}
-			.dual-type {
-				.background-primary {
-					clip-path: polygon(0 0, 0% 100%, 100% 100%);
-				}
-				.background-secondary {
-					clip-path: polygon(0 0, 100% 0, 100% 100%);
-				}
+		&.stats {
+			display: flex;
+			flex-direction: column;
+			.title {
+				z-index: 0;
+				padding: 20px;
+				background-color: $medium-dark-gray;
+				text-align: center;
+				width: 100%;
+				font-size: 60px;
+				font-weight: bold;
 			}
 			.content {
-				height: $height;
 				display: flex;
-				flex-direction: row;
+				flex-direction: column;
+				justify-content: center;
 				align-items: center;
-				//justify-content: space-around;
-				z-index: 1;
-				padding-top: 100px;
-				.column {
-					height: 100%;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-					align-items: center;
-					position: relative;
-					&:first-child{
-						width: 300px
-					}
-					.pika-ruler{
-						//margin-right: 100px;
-						//width: 200px;
-						display: flex;
-						flex-direction: column;
-						justify-content: flex-start;
-						position: absolute;
-						bottom: 22%;
-						left: 30%;
-					}
-					.overview {
-						width: 300px;
-						margin-right: -100px;
-					}
-					.type-emblem {
-						margin-bottom: 80px;
-					}
-					.info {
-						display: flex;
-						flex-direction: column;
-						align-items: center;
-						font-size: 18px;
-						font-weight: normal;
-						padding-bottom: 40px;
-						&:last-child {
-							padding-bottom: 0px;
+				padding: 60px;
+				.stats-container {
+					width: 660px;
+					.stat {
+						float: left;
+						margin-bottom: 60px;
+						:last-child {
+							margin-bottom: 0px;
 						}
-						.value {
-							font-size: 28px;
-							font-weight: bold;
-							display: flex;
-							flex-direction: row;
+						:nth-child(odd) {
+							margin-right: 60px;
 						}
-						.pikachus {
-							font-size: 12px;
-							font-weight: normal;
-						}
-					}
-						.pikachu {
-							opacity: 0.8;
-							filter: brightness(0);
-							margin-top: -10%;
-							margin-bottom: -10%;
-						}
-					}
-					.name {
-						width: 500px;
-						text-align: center;
-						font-size: 85px;
-						font-weight: bold;
-						padding-bottom: 45px;
 					}
 				}
-				.sprite {
-					width: 500px;
-					image-rendering: pixelated;
-				}
+			}
 		}
 	}
-}
-
-.photo {
-	height: 15px;
-
 }
