pokemon-emblem now separate component mocks update pokemon-stats development pokemon-evolutions work in progress

--- a/src/app/pokemon/overview/overview.component.html
+++ b/src/app/pokemon/overview/overview.component.html
@@ -26,7 +26,7 @@
 						{{this.pokemon.height * 10 + "cm"}}
 					</div>
 					<div class="pikachus">
-						{{this.pikachuService.getPikachusByHeight(this.pokemon.height) + " Pikachu"}}
+						{{this.pikachuService.getHeightInPickachus(this.pokemon.height) + " Pikachu"}}
 					</div>
 				</div>
 				<div class="info">
@@ -37,7 +37,7 @@
 						{{this.pokemon.weight / 10 + "kg"}}
 					</div>
 					<div class="pikachus">
-						{{this.pikachuService.getPikachusByWeight(this.pokemon.weight) + " Pikachu"}}
+						{{this.pikachuService.getWeightInPikachus(this.pokemon.weight) + " Pikachu"}}
 					</div>
 				</div>
 				<div class="info">
