--- a/src/app/pokemon/overview/overview.component.scss
+++ b/src/app/pokemon/overview/overview.component.scss
@@ -50,6 +50,13 @@ $height: 600px;
 			&:first-child {
 				width: 300px
 			}
+			.pika-ruler {
+				width: 200px;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+			}
 			.overview {
 				width: 300px;
 				margin-right: -100px;
