--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="pokemon">
+<div class="pokemon" *ngIf="pokemon">
 	<div class="section">
 		<pok-overview [pokemon]="this.pokemon"></pok-overview>
 	</div>
