--- a/src/app/shared/type-emblem/type-emblem.component.html
+++ b/src/app/shared/type-emblem/type-emblem.component.html
@@ -1,39 +1,39 @@
-<div class="type-emblem" [ngClass]="{'active': this.active}">
-	<div class="one-type" *ngIf="type.length==1">
-		<div class="{{this.type[0].name}}">
+<div class="type-emblem" [ngClass]="{'active': active}">
+	<div class="one-type" *ngIf="types.length==1">
+		<div class="{{types[0].type.name}}">
 			<div class="primary-color mat-elevation-z10">
 				<div class="secondary-color">
 					<img class="icon"
-						 src="{{'../../../assets/icons/type-icons/' + this.typeIconService.getIconByType(this.type[0].name)}}">
+						 src="{{'../../../assets/icons/type-icons/' + typeIconService.getIconByType(types[0].type.name)}}">
 					<span class="type-label">
-				{{this.type[0].name | uppercase}}
+				{{types[0].type.name | uppercase}}
 			</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="two-types" *ngIf="type.length==2">
-		<div class="{{this.type[0].name}} half">
+	<div class="two-types" *ngIf="types.length==2">
+		<div class="{{types[0].type.name}} half">
 			<div class="primary-color">
 				<div class="secondary-color">
 					<div class="icon-text">
 						<img class="icon"
-							 src="{{'../../../assets/icons/type-icons/' + this.typeIconService.getIconByType(this.type[0].name)}}">
+							 src="{{'../../../assets/icons/type-icons/' + typeIconService.getIconByType(types[0].type.name)}}">
 						<span class="type-label">
-						{{this.type[0].name | uppercase}}
+						{{types[0].type.name | uppercase}}
 					</span>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="{{this.type[1].name}} half">
+		<div class="{{types[1].type.name}} half">
 			<div class="primary-color">
 				<div class="secondary-color">
 					<div class="icon-text">
 						<img class="icon"
-							 src="{{'../../../assets/icons/type-icons/' + this.typeIconService.getIconByType(this.type[1].name)}}">
+							 src="{{'../../../assets/icons/type-icons/' + typeIconService.getIconByType(types[1].type.name)}}">
 						<span class="type-label">
-						{{this.type[1].name | uppercase}}
+						{{types[1].type.name | uppercase}}
 					</span>
 					</div>
 				</div>
