--- a/src/app/types/types.component.scss
+++ b/src/app/types/types.component.scss
@@ -1,21 +1,5 @@
 @import "../../variables.scss";
 
-.type-emblem-container-5 {
-	width: 1050px;
-}
-.type-emblem-container-4 {
-	width: 840px;
-}
-.type-emblem-container-3 {
-	width: 630px;
-}
-.type-emblem-container-2 {
-	width: 420px;
-}
-.type-emblem-container-1 {
-	width: 210px;
-}
-
 .page {
 	width: 100%;
 	padding-top: 100px;
@@ -24,8 +8,16 @@
 .type-emblem {
 	horiz-align: center;
 	margin: 20px;
-	float: left;
 	&:hover {
 		cursor: pointer;
 	}
+}
+
+.pokemon-types {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	padding: 0 5%;
 }
