--- a/src/app/pokemon/overview/overview.component.html
+++ b/src/app/pokemon/overview/overview.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-	<div class="background" [ngClass]="{'dual-type': this.pokemon.types.length > 1}">
-		<div class="{{this.pokemon.types[0].name}}">
+	<div class="background" [ngClass]="{'dual-type': pokemon.types.length > 1}">
+		<div class="{{pokemon.types[0].type.name}}">
 			<div class="background-primary primary-color">
 			</div>
 		</div>
-		<div *ngIf="this.pokemon.types.length > 1" class="{{this.pokemon.types[1].name}}">
+		<div *ngIf="pokemon.types.length > 1" class="{{pokemon.types[1].type.name}}">
 			<div class="background-secondary primary-color">
 			</div>
 		</div>
@@ -12,7 +12,7 @@
 	<div class="content">
 		<div class="column">
 			<div class="pika-ruler">
-				<pok-pika-ruler [pokemon]="this.pokemon"></pok-pika-ruler>
+				<pok-pika-ruler [pokemon]="pokemon"></pok-pika-ruler>
 			</div>
 		</div>
 
@@ -23,10 +23,10 @@
 						Height:
 					</div>
 					<div class="value">
-						{{this.pokemon.height * 10 + "cm"}}
+						{{pokemon.height * 10 + "cm"}}
 					</div>
 					<div class="pikachus">
-						{{this.pikachuService.getHeightInPickachus(this.pokemon.height) + " Pikachu"}}
+						{{pikachuService.getHeightInPickachus(pokemon.height) + " Pikachu"}}
 					</div>
 				</div>
 				<div class="info">
@@ -34,22 +34,19 @@
 						Weight:
 					</div>
 					<div class="value">
-						{{this.pokemon.weight / 10 + "kg"}}
+						{{pokemon.weight / 10 + "kg"}}
 					</div>
 					<div class="pikachus">
-						{{this.pikachuService.getWeightInPikachus(this.pokemon.weight) + " Pikachu"}}
+						{{pikachuService.getWeightInPikachus(pokemon.weight) + " Pikachu"}}
 					</div>
 				</div>
 				<div class="info">
 					<div>
-						Damage Type<span *ngIf="checkMultipleDamageTypes()">s</span>:
+						Damage Type<span *ngIf="pokemon.types && pokemon.types.length > 1">s</span>:
 					</div>
 					<div class="value">
-						<span>
-							{{this.pokemon.types[0].move_damage_class.name}}
-						</span>
-						<span *ngIf="checkMultipleDamageTypes()">
-							, {{this.pokemon.types[1].move_damage_class.name}}
+						<span *ngFor="let type of pokemon.types">
+							{{type.type.name}}
 						</span>
 					</div>
 				</div>
@@ -57,14 +54,14 @@
 		</div>
 		<div class="column">
 			<div class="name">
-				{{this.pokemon.name | uppercase}}
+				{{pokemon.name | uppercase}}
 			</div>
 			<div class="type-emblem">
-				<pok-type-emblem [type]="this.pokemon.types" [active]="false"></pok-type-emblem>
+				<pok-type-emblem [types]="pokemon.types" [active]="false"></pok-type-emblem>
 			</div>
 		</div>
 		<div class="column">
-			<img class="sprite" src="{{this.url}}">
+			<img class="sprite" src="{{url}}">
 		</div>
 	</div>
 </div>
